test/end-to-end/compile-errors/spec-errors.crow
main void()
	()

s spec by-val
	x nat(...xs nat array)
